--- a/public/login.html
+++ b/public/login.html
@@ -19,20 +19,20 @@
 <div class="bg-white p-8 rounded-xl shadow w-full max-w-md">
   <h1 class="text-2xl font-bold mb-6 text-center">Entrar</h1>
 
-  <input
-    id="email"
-    type="email"
-    placeholder="Email"
-    class="w-full mb-3 p-3 border rounded"
-  >
+<input
+  id="email"
+  type="email"
+  placeholder="Email"
+  class="w-full mb-3 p-3 border rounded"
+/>
 
-  <!-- ID TEM QUE SER password -->
-  <input
-    id="password"
-    type="password"
-    placeholder="Senha"
-    class="w-full mb-4 p-3 border rounded"
-  >
+<input
+  id="senha"
+  type="password"
+  placeholder="Senha"
+  class="w-full mb-4 p-3 border rounded"
+/>
+
 
   <button
     onclick="login()"
