--- a/public/register.html
+++ b/public/register.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Criar Conta</title>
+  <link rel="icon" href="img/controle-financeiro_36900-2119.avif" type="image/png">
   <link href="output.css" rel="stylesheet">
 </head>
 
