--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,19 @@
             <div id="listaMetas" class="space-y-3 text-lg font-semibold"></div>
         </section>
 
+        function renderMeta(meta) {
+  return `
+    <div class="bg-white p-4 rounded shadow mb-2">
+      <h3>${meta.nome}</h3>
+      <p>R$ ${meta.valor_atual} / R$ ${meta.valor_total}</p>
+      <div class="w-full bg-gray-200 h-3 rounded">
+        <div class="bg-green-500 h-3 rounded" style="width:${meta.progresso}%"></div>
+      </div>
+    </div>
+  `;
+}
+
+
         <!-- Nova Categoria -->
         <section class="bg-white p-6 rounded-xl shadow-lg space-y-6">
             <h2 class="text-xl font-semibold flex items-center gap-2"><i data-lucide="tag" class="w-6 h-6"></i> Nova Categoria</h2>
