--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
             </h1>
         </header>
 
+        <canvas id="grafico"></canvas>
+
         <!-- Formulário -->
         <form id="form-transacao" class="bg-white p-8 rounded-2xl shadow-lg space-y-6">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
@@ -105,18 +107,7 @@
             <div id="listaMetas" class="space-y-3 text-lg font-semibold"></div>
         </section>
 
-        function renderMeta(meta) {
-  return `
-    <div class="bg-white p-4 rounded shadow mb-2">
-      <h3>${meta.nome}</h3>
-      <p>R$ ${meta.valor_atual} / R$ ${meta.valor_total}</p>
-      <div class="w-full bg-gray-200 h-3 rounded">
-        <div class="bg-green-500 h-3 rounded" style="width:${meta.progresso}%"></div>
-      </div>
-    </div>
-  `;
-}
-
+        
 
         <!-- Nova Categoria -->
         <section class="bg-white p-6 rounded-xl shadow-lg space-y-6">
