--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
 
         
 
-        <!-- Nova Categoria -->
+        <!-- Nova Categoria 
         <section class="bg-white p-6 rounded-xl shadow-lg space-y-6">
             <h2 class="text-xl font-semibold flex items-center gap-2"><i data-lucide="tag" class="w-6 h-6"></i> Nova Categoria</h2>
             <div class="flex flex-col md:flex-row gap-4">
@@ -126,7 +126,7 @@
             </div>
         </section>
 
-    </div>
+    </div> -->
 
 <button onclick="logout()">Sair</button>
 
