--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,30 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 
+<script>
+  const sidebar = document.getElementById("sidebar");
+  const btnMenu = document.getElementById("btnMenu");
+  const btnCloseMenu = document.getElementById("btnCloseMenu");
+
+  btnMenu.addEventListener("click", () => {
+    sidebar.classList.remove("-translate-x-full");
+  });
+
+  btnCloseMenu.addEventListener("click", () => {
+    sidebar.classList.add("-translate-x-full");
+  });
+</script>
+
+
 <body class="bg-gradient-to-br from-blue-100 via-gray-100 to-white text-gray-800 min-h-screen p-6">
     <div class="max-w-7xl mx-auto space-y-8">
 
         <!-- Título -->
         <header class="flex justify-between items-center">
+            <button id="btnMenu" class="p-2 rounded-lg hover:bg-blue-100 transition">
+                <i data-lucide="menu" class="w-8 h-8 text-blue-700"></i>
+            </button>
+
             <h1 class="text-5xl font-extrabold text-blue-800 flex items-center gap-3">
                 <i data-lucide="wallet" class="w-8 h-8 text-blue-700"></i> Controle Financeiro
             </h1>
@@ -26,13 +45,17 @@
         <form id="form-transacao" class="bg-white p-8 rounded-2xl shadow-lg space-y-6">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <input type="text" id="valor" inputmode="decimal" pattern="[\d.,]*" name="valor"
-                    placeholder="Valor (R$)" class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none">
-                <select id="tipo" class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none">
+                    placeholder="Valor (R$)"
+                    class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none">
+                <select id="tipo"
+                    class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none">
                     <option value="entrada">Entrada</option>
                     <option value="saida">Saída</option>
                 </select>
-                <select id="categoria" class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none"></select>
-                <input type="month" id="data" required class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none">
+                <select id="categoria"
+                    class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none"></select>
+                <input type="month" id="data" required
+                    class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none">
             </div>
             <div class="text-right">
                 <button type="submit"
@@ -47,28 +70,33 @@
             <label for="filtro-mes" class="font-medium text-lg">
                 <i data-lucide="calendar" class="w-6 h-6 text-blue-700"></i> Filtrar por mês:
             </label>
-            <input type="month" id="filtro-mes" class="p-3 border border-gray-300 rounded-lg w-auto focus:ring-2 ring-blue-400 focus:outline-none">
+            <input type="month" id="filtro-mes"
+                class="p-3 border border-gray-300 rounded-lg w-auto focus:ring-2 ring-blue-400 focus:outline-none">
         </div>
 
         <!-- Resumo com cards -->
         <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
             <div class="bg-green-50 border border-green-200 p-6 rounded-xl shadow-lg flex items-center gap-4">
                 <i data-lucide="arrow-down-circle" class="text-green-600 w-10 h-10"></i>
-                <p class="text-lg font-medium">Entradas:<br><span id="total-entradas" class="text-green-700 text-2xl font-bold">R$ 0,00</span></p>
+                <p class="text-lg font-medium">Entradas:<br><span id="total-entradas"
+                        class="text-green-700 text-2xl font-bold">R$ 0,00</span></p>
             </div>
             <div class="bg-red-50 border border-red-200 p-6 rounded-xl shadow-lg flex items-center gap-4">
                 <i data-lucide="arrow-up-circle" class="text-red-600 w-10 h-10"></i>
-                <p class="text-lg font-medium">Saídas:<br><span id="total-saidas" class="text-red-700 text-2xl font-bold">R$ 0,00</span></p>
+                <p class="text-lg font-medium">Saídas:<br><span id="total-saidas"
+                        class="text-red-700 text-2xl font-bold">R$ 0,00</span></p>
             </div>
             <div class="bg-blue-50 border border-blue-200 p-6 rounded-xl shadow-lg flex items-center gap-4">
                 <i data-lucide="dollar-sign" class="text-blue-600 w-10 h-10"></i>
-                <p class="text-lg font-medium">Saldo:<br><span id="saldo" class="text-blue-700 text-2xl font-bold">R$ 0,00</span></p>
+                <p class="text-lg font-medium">Saldo:<br><span id="saldo" class="text-blue-700 text-2xl font-bold">R$
+                        0,00</span></p>
             </div>
         </section>
 
         <!-- Lista de transações -->
         <div class="bg-white p-6 rounded-xl shadow-lg">
-            <h2 class="text-xl font-semibold mb-4 flex items-center gap-2"><i data-lucide="list" class="w-6 h-6"></i> Transações</h2>
+            <h2 class="text-xl font-semibold mb-4 flex items-center gap-2"><i data-lucide="list" class="w-6 h-6"></i>
+                Transações</h2>
             <div class="overflow-auto max-h-80">
                 <table class="min-w-full text-sm divide-y divide-gray-200">
                     <thead class="bg-gray-50 text-gray-600">
@@ -87,19 +115,24 @@
 
         <!-- Gráfico -->
         <section class="bg-white p-6 rounded-xl shadow-lg">
-            <h2 class="text-xl font-semibold mb-4 flex items-center gap-2"><i data-lucide="bar-chart" class="w-6 h-6"></i> Entradas x Saídas por Categoria</h2>
+            <h2 class="text-xl font-semibold mb-4 flex items-center gap-2"><i data-lucide="bar-chart"
+                    class="w-6 h-6"></i> Entradas x Saídas por Categoria</h2>
             <canvas id="graficoCombinado" class="w-full h-72"></canvas>
-             
-        <canvas id="grafico"></canvas>
+
+            <canvas id="grafico"></canvas>
         </section>
 
         <!-- Metas -->
         <section class="bg-white p-6 rounded-xl shadow-lg space-y-6">
-            <h2 class="text-xl font-semibold flex items-center gap-2"><i data-lucide="target" class="w-6 h-6"></i> Minhas Metas</h2>
+            <h2 class="text-xl font-semibold flex items-center gap-2"><i data-lucide="target" class="w-6 h-6"></i>
+                Minhas Metas</h2>
             <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
-                <input type="text" id="nomeMeta" placeholder="Nome da Meta" class="p-4 border border-gray-300 rounded-lg w-full">
-                <input type="text" id="valorMeta" placeholder="Valor Objetivo (R$)" class="p-4 border border-gray-300 rounded-lg w-full">
-                <input type="text" id="valorAtualMeta" placeholder="Valor Atual (R$)" class="p-4 border border-gray-300 rounded-lg w-full">
+                <input type="text" id="nomeMeta" placeholder="Nome da Meta"
+                    class="p-4 border border-gray-300 rounded-lg w-full">
+                <input type="text" id="valorMeta" placeholder="Valor Objetivo (R$)"
+                    class="p-4 border border-gray-300 rounded-lg w-full">
+                <input type="text" id="valorAtualMeta" placeholder="Valor Atual (R$)"
+                    class="p-4 border border-gray-300 rounded-lg w-full">
                 <button id="btnAddMeta"
                     class="bg-green-600 text-white py-3 px-6 rounded-lg hover:bg-green-700 transition-all ease-in-out duration-200 flex items-center gap-2">
                     <i data-lucide="plus" class="w-5 h-5"></i> Criar Meta
@@ -108,7 +141,7 @@
             <div id="listaMetas" class="space-y-3 text-lg font-semibold"></div>
         </section>
 
-        
+
 
         <!-- Nova Categoria 
         <section class="bg-white p-6 rounded-xl shadow-lg space-y-6">
@@ -128,22 +161,48 @@
 
     </div> -->
 
-<button onclick="logout()">Sair</button>
+        <button onclick="logout()">Sair</button>
 
 
 
-<script>
-  if (!localStorage.getItem("token")) {
-    window.location.href = "/login.html";
-  }
+        <script>
+            if (!localStorage.getItem("token")) {
+                window.location.href = "/login.html";
+            }
 
-  function logout() {
-  localStorage.removeItem("token");
-  location.href = "/login.html";
-}
+            function logout() {
+                localStorage.removeItem("token");
+                location.href = "/login.html";
+            }
 
-</script>
+        </script>
 
 
-  <script src="script.js"></script>
+        <script src="script.js"></script>
 </body>
+
+<div id="sidebar"
+  class="fixed top-0 left-0 h-full w-64 bg-white shadow-2xl
+         transform -translate-x-full transition-transform duration-300 z-50">
+
+  <div class="p-6 border-b flex justify-between items-center">
+    <h2 class="text-xl font-bold text-blue-700">Menu</h2>
+    <button id="btnCloseMenu">
+      <i data-lucide="x" class="w-6 h-6"></i>
+    </button>
+  </div>
+
+  <nav class="p-6 space-y-4">
+    <a href="/" class="flex items-center gap-3 hover:text-blue-600">
+      <i data-lucide="layout-dashboard"></i> Dashboard
+    </a>
+
+    <a href="/categorias.html" class="flex items-center gap-3 hover:text-blue-600">
+      <i data-lucide="tag"></i> Criar Categoria
+    </a>
+
+    <a href="/investimentos.html" class="flex items-center gap-3 text-gray-400 cursor-not-allowed">
+      <i data-lucide="trending-up"></i> Investimentos (em breve)
+    </a>
+  </nav>
+</div>
