--- a/public/categorias.html
+++ b/public/categorias.html
@@ -25,6 +25,6 @@
     </button>
   </div>
 
-<script src="categorias.js"></script>
+<script src="/api/categories_user.js"></script>
 </body>
 </html>
