Opção para criar categoria

--- a/public/index.html
+++ b/public/index.html
@@ -110,12 +110,13 @@
 
         
 
-        <!-- Nova Categoria 
+        <!-- Nova Categoria -->
+         
         <section class="bg-white p-6 rounded-xl shadow-lg space-y-6">
             <h2 class="text-xl font-semibold flex items-center gap-2"><i data-lucide="tag" class="w-6 h-6"></i> Nova Categoria</h2>
             <div class="flex flex-col md:flex-row gap-4">
                 <input type="text" id="inputNovaCategoria" placeholder="Nova categoria personalizada" class="p-4 border border-gray-300 rounded-lg w-full">
-                <select id="tipo" class="p-4 border border-gray-300 rounded-lg w-full">
+                <select id="tipoCategoria" class="p-4 border border-gray-300 rounded-lg w-full">
                     <option value="Saida">Saída</option>
                     <option value="Entrada">Entrada</option>
                 </select>
@@ -126,7 +127,7 @@
             </div>
         </section>
 
-    </div> -->
+    </div> 
 
 <button onclick="logout()">Sair</button>
 
