--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Controle Financeiro</title>
-    <link rel="icon" href="controle-financeiro_36900-2119.avif" type="image/png">
+    <link rel="icon" href="img/controle-financeiro_36900-2119.avif" type="image/png">
     <link href="./output.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -110,13 +110,12 @@
 
         
 
-        <!-- Nova Categoria -->
-         
+        <!-- Nova Categoria 
         <section class="bg-white p-6 rounded-xl shadow-lg space-y-6">
             <h2 class="text-xl font-semibold flex items-center gap-2"><i data-lucide="tag" class="w-6 h-6"></i> Nova Categoria</h2>
             <div class="flex flex-col md:flex-row gap-4">
                 <input type="text" id="inputNovaCategoria" placeholder="Nova categoria personalizada" class="p-4 border border-gray-300 rounded-lg w-full">
-                <select id="tipoCategoria" class="p-4 border border-gray-300 rounded-lg w-full">
+                <select id="tipo" class="p-4 border border-gray-300 rounded-lg w-full">
                     <option value="Saida">Saída</option>
                     <option value="Entrada">Entrada</option>
                 </select>
@@ -127,7 +126,7 @@
             </div>
         </section>
 
-    </div> 
+    </div> -->
 
 <button onclick="logout()">Sair</button>
 
