--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,18 @@
 
         <!-- Título -->
         <header class="flex justify-between items-center">
-            <h1 class="text-5xl font-extrabold text-blue-800 flex items-center gap-3">
-                <i data-lucide="wallet" class="w-8 h-8 text-blue-700"></i> Controle Financeiro
-            </h1>
+            <div class="flex items-center gap-4">
+                <!-- Menu Hamburguer -->
+                <button id="btnMenuCategorias" class="p-2 hover:bg-blue-100 rounded-lg transition-all" title="Gerenciar Categorias">
+                    <i data-lucide="menu" class="w-8 h-8 text-blue-700"></i>
+                </button>
+                <h1 class="text-5xl font-extrabold text-blue-800 flex items-center gap-3">
+                    <i data-lucide="wallet" class="w-8 h-8 text-blue-700"></i> Controle Financeiro
+                </h1>
+            </div>
+            <button onclick="logout()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg flex items-center gap-2">
+                <i data-lucide="log-out" class="w-5 h-5"></i> Sair
+            </button>
         </header>
 
 
@@ -108,27 +117,78 @@
             <div id="listaMetas" class="space-y-3 text-lg font-semibold"></div>
         </section>
 
-        
+    </div>
 
-        <!-- Nova Categoria 
-        <section class="bg-white p-6 rounded-xl shadow-lg space-y-6">
-            <h2 class="text-xl font-semibold flex items-center gap-2"><i data-lucide="tag" class="w-6 h-6"></i> Nova Categoria</h2>
-            <div class="flex flex-col md:flex-row gap-4">
-                <input type="text" id="inputNovaCategoria" placeholder="Nova categoria personalizada" class="p-4 border border-gray-300 rounded-lg w-full">
-                <select id="tipo" class="p-4 border border-gray-300 rounded-lg w-full">
-                    <option value="Saida">Saída</option>
-                    <option value="Entrada">Entrada</option>
-                </select>
-                <button id="btnAddCategoria"
-                    class="bg-purple-600 text-white py-3 px-6 rounded-lg hover:bg-purple-700 transition-all ease-in-out duration-200 flex items-center gap-2">
-                    <i data-lucide="plus" class="w-5 h-5"></i> Adicionar
+    <!-- Modal de Gerenciamento de Categorias -->
+    <div id="modalCategorias" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex items-center justify-center p-4">
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-4xl max-h-[90vh] overflow-hidden flex flex-col">
+            <!-- Header -->
+            <div class="bg-gradient-to-r from-blue-600 to-blue-700 text-white p-6 flex justify-between items-center">
+                <h2 class="text-2xl font-bold flex items-center gap-3">
+                    <i data-lucide="folder" class="w-7 h-7"></i>
+                    Gerenciar Categorias Personalizadas
+                </h2>
+                <button id="btnFecharModal" class="hover:bg-white hover:bg-opacity-20 rounded-full p-2 transition-all">
+                    <i data-lucide="x" class="w-6 h-6"></i>
                 </button>
             </div>
-        </section>
 
-    </div> -->
+            <!-- Conteúdo -->
+            <div class="p-6 overflow-y-auto flex-1">
+                <!-- Formulário -->
+                <div class="bg-blue-50 p-6 rounded-xl mb-6">
+                    <h3 class="text-lg font-semibold mb-4 flex items-center gap-2">
+                        <i data-lucide="plus-circle" class="w-5 h-5 text-blue-600"></i>
+                        <span id="tituloFormCategoria">Nova Categoria</span>
+                    </h3>
+                    <form id="formCategoria" class="space-y-4">
+                        <input type="hidden" id="categoriaEditId">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                            <input 
+                                type="text" 
+                                id="inputNomeCategoria" 
+                                placeholder="Nome da categoria" 
+                                required
+                                class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none">
+                            <select 
+                                id="inputTipoCategoria" 
+                                required
+                                class="p-4 border border-gray-300 rounded-lg w-full focus:ring-2 ring-blue-400 focus:outline-none">
+                                <option value="">Selecione o tipo</option>
+                                <option value="entrada">Entrada</option>
+                                <option value="saida">Saída</option>
+                            </select>
+                        </div>
+                        <div class="flex gap-3">
+                            <button 
+                                type="submit" 
+                                class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-all flex items-center gap-2">
+                                <i data-lucide="save" class="w-5 h-5"></i>
+                                <span id="btnTextoSalvar">Criar Categoria</span>
+                            </button>
+                            <button 
+                                type="button" 
+                                id="btnCancelarEdicao"
+                                class="bg-gray-400 text-white px-6 py-3 rounded-lg hover:bg-gray-500 transition-all hidden">
+                                Cancelar
+                            </button>
+                        </div>
+                    </form>
+                </div>
 
-<button onclick="logout()">Sair</button>
+                <!-- Lista de Categorias -->
+                <div class="space-y-4">
+                    <h3 class="text-lg font-semibold flex items-center gap-2">
+                        <i data-lucide="list" class="w-5 h-5 text-gray-600"></i>
+                        Minhas Categorias Personalizadas
+                    </h3>
+                    <div id="listaCategoriasUsuario" class="space-y-2">
+                        <!-- Categorias serão inseridas aqui via JavaScript -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
