--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,18 @@
             </button>
         </header>
 
+        <div id="submenuCategorias"
+     class="absolute mt-2 left-6 bg-white rounded-xl shadow-xl border border-gray-200 w-56 hidden z-40">
+
+    <button id="btnAbrirCategorias"
+        class="w-full px-4 py-3 text-left hover:bg-blue-50 flex items-center gap-3 text-gray-700">
+        <i data-lucide="folder-plus" class="w-5 h-5 text-blue-600"></i>
+        Criar Categoria
+    </button>
+
+</div>
+
+
 
         <!-- Formulário -->
         <form id="form-transacao" class="bg-white p-8 rounded-2xl shadow-lg space-y-6">
@@ -207,3 +219,34 @@
 
   <script src="script.js"></script>
 </body>
+
+<script>
+  const btnMenu = document.getElementById("btnMenuCategorias");
+  const submenu = document.getElementById("submenuCategorias");
+  const modal = document.getElementById("modalCategorias");
+  const btnAbrirCategorias = document.getElementById("btnAbrirCategorias");
+  const btnFecharModal = document.getElementById("btnFecharModal");
+
+  // Abrir / fechar submenu
+  btnMenu.addEventListener("click", () => {
+    submenu.classList.toggle("hidden");
+  });
+
+  // Abrir modal de categorias
+  btnAbrirCategorias.addEventListener("click", () => {
+    submenu.classList.add("hidden");
+    modal.classList.remove("hidden");
+  });
+
+  // Fechar modal
+  btnFecharModal.addEventListener("click", () => {
+    modal.classList.add("hidden");
+  });
+
+  // Clicar fora fecha submenu
+  document.addEventListener("click", (e) => {
+    if (!btnMenu.contains(e.target) && !submenu.contains(e.target)) {
+      submenu.classList.add("hidden");
+    }
+  });
+</script>
