--- a/public/index.html
+++ b/public/index.html
@@ -217,7 +217,8 @@
 </script>
 
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
+<script src="/js/user_categories.js"></script>
 
 
 </body>
