Criação de categoria

--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@
 
 
 <script src="script.js"></script>
-<script src="/js/user_categories.js"></script>
+<script src="user_categories.js"></script>
 
 
 </body>
