--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,11 @@
         </header>
 
         <div id="submenuCategorias"
-            class="absolute mt-2 left-6 bg-white rounded-xl shadow-xl border border-gray-200 w-56 hidden z-40">
+            class="absolute mt-2 bg-white rounded-xl shadow-xl border border-gray-200 w-56 hidden z-40"
+            style="top: 70px; left: 24px;">
 
             <button id="btnAbrirCategorias"
-                class="w-full px-4 py-3 text-left hover:bg-blue-50 flex items-center gap-3 text-gray-700">
+                class="w-full px-4 py-3 text-left hover:bg-blue-50 flex items-center gap-3 text-gray-700 rounded-xl">
                 <i data-lucide="folder-plus" class="w-5 h-5 text-blue-600"></i>
                 Criar Categoria
             </button>
