Ajustado Iconi do site

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Controle Financeiro</title>
-    <link rel="icon" href="img/controle-financeiro_36900-2119.avif" type="image/png">
+    <link rel="icon" href="img/profit_1838239.png" type="image/png">
     <link href="./output.css" rel="stylesheet">
     <link href="./custom.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
