--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
-  <link rel="icon" href="controle-financeiro_36900-2119.avif" type="image/png">
+  <link rel="icon" href="img/profit_1838239.png" type="image/png">
   <link href="output.css" rel="stylesheet">
 </head>
 
