--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="img/profit_1838239.png" type="image/png">
     <link href="./output.css" rel="stylesheet">
     <link href="./custom.css" rel="stylesheet">
+    <link href="./financepro-style.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
@@ -24,8 +25,9 @@
                     <i data-lucide="menu" class="w-8 h-8 text-blue-700"></i>
                 </button>
                 <h1 class="text-5xl font-extrabold text-blue-800 flex items-center gap-3">
-                    <i data-lucide="wallet" class="w-8 h-8 text-blue-700"></i> Controle Financeiro
+                    <i data-lucide="wallet" class="w-8 h-8 text-blue-700"></i> FinancePro
                 </h1>
+                <span style="font-size: 1rem; color: var(--fp-text-muted); font-weight: 400; margin-left: -0.5rem;">Controle Financeiro</span>
             </div>
             <button onclick="logout()"
                 class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg flex items-center gap-2">
