--- a/public/index.html
+++ b/public/index.html
@@ -85,17 +85,17 @@
         <!-- Resumo com cards -->
         <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
             <div class="bg-green-50 border border-green-200 p-6 rounded-xl shadow-lg flex items-center gap-4">
-                <i data-lucide="arrow-down-circle" class="text-green-600 w-10 h-10"></i>
+                <i data-lucide="trending-up" class="text-green-600 w-10 h-10"></i>
                 <p class="text-lg font-medium">Entradas:<br><span id="total-entradas"
                         class="text-green-700 text-2xl font-bold">R$ 0,00</span></p>
             </div>
             <div class="bg-red-50 border border-red-200 p-6 rounded-xl shadow-lg flex items-center gap-4">
-                <i data-lucide="arrow-up-circle" class="text-red-600 w-10 h-10"></i>
+                <i data-lucide="trending-down" class="text-red-600 w-10 h-10"></i>
                 <p class="text-lg font-medium">Saídas:<br><span id="total-saidas"
                         class="text-red-700 text-2xl font-bold">R$ 0,00</span></p>
             </div>
             <div class="bg-blue-50 border border-blue-200 p-6 rounded-xl shadow-lg flex items-center gap-4">
-                <i data-lucide="dollar-sign" class="text-blue-600 w-10 h-10"></i>
+                <i data-lucide="wallet" class="text-blue-600 w-10 h-10"></i>
                 <p class="text-lg font-medium">Saldo:<br><span id="saldo" class="text-blue-700 text-2xl font-bold">R$
                         0,00</span></p>
             </div>
