--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,16 @@
             style="top: 70px; left: 24px;">
 
             <button id="btnAbrirCategorias"
-                class="w-full px-4 py-3 text-left hover:bg-blue-50 flex items-center gap-3 text-gray-700 rounded-xl">
+                class="w-full px-4 py-3 text-left hover:bg-blue-50 flex items-center gap-3 text-gray-700 rounded-t-xl border-b border-gray-200">
                 <i data-lucide="folder-plus" class="w-5 h-5 text-blue-600"></i>
                 Criar Categoria
             </button>
+
+            <a href="/calculadoras.html"
+                class="w-full px-4 py-3 text-left hover:bg-blue-50 flex items-center gap-3 text-gray-700 rounded-b-xl block">
+                <i data-lucide="calculator" class="w-5 h-5 text-green-600"></i>
+                Calculadoras de Investimento
+            </a>
 
         </div>
 
